--- a/app/Resources/views/site/_partials/_header.html.twig
+++ b/app/Resources/views/site/_partials/_header.html.twig
@@ -66,8 +66,14 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="{{ path('site_experimente') }}" class="{% if app.request.attributes.get('_route') == 'site_experimente' %}active{% endif %}">
+                                        <a href="#" class="{% if app.request.attributes.get('_route') == 'site_experimente' %}active{% endif %}">
                                             Experimente
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#"
+                                           class="{% if app.request.attributes.get('_route') == 'site_downloads' %}active{% endif %}">
+                                            Downloads
                                         </a>
                                     </li>
                                     <li>
