--- a/app/Resources/views/site/produtos/index2.html.twig
+++ b/app/Resources/views/site/produtos/index2.html.twig
@@ -38,7 +38,7 @@
     <div class="clearfix margin_top5"></div>
 
     <div class="feature_section11">
-        <div class="container animate fadeInUp" data-anim-type="fadeInUp">
+        <div class="container animate" data-anim-type="fadeInUp">
 
             <strong>Eleve Seu Negócio</strong>
             <div class="clearfix"></div>
@@ -137,7 +137,6 @@
                     <ul class="slides">
 
                         <li>
-
                             <div class="one_half">
                                 <br/><br/>
                                 <h2>Tela de Clientes</h2>
@@ -148,22 +147,20 @@
                                     their infancy Various versions have evolved over the years has survived not only
                                     five centuries but also the leap into electronic typesetting normal of letters.</p>
                             </div>
-
                             <div class="one_half last">
-                                <a href="{{ asset('site/assets/images/screen_controledeacessodeusuario_laptop.png') }}" class="fancybox"
+                                <a href="{{ asset('site/assets/images/screen_clientes_pc.png') }}" class="fancybox"
                                    rel="gallery1" title="Clientes">
-                                    <img src="{{ asset('site/assets/images/screen_controledeacessodeusuario_laptop.png') }}" alt=""
+                                    <img src="{{ asset('site/assets/images/screen_clientes_pc.png') }}" alt=""
                                          width="530"/>
                                 </a>
                             </div>
-
-                        </li><!-- end section -->
+                        </li>
 
                         <li>
-                            <div class="one_half last">
-                                <a href="{{ asset('site/assets/images/screen_controledeacessodeusuario_laptop.png') }}"
+                            <div class="one_half">
+                                <a href="{{ asset('site/assets/images/screen_contasareceber_pc.png') }}"
                                    class="fancybox" rel="gallery1" title="Contas a Receber">
-                                    <img src="{{ asset('site/assets/images/screen_controledeacessodeusuario_laptop.png') }}" alt=""
+                                    <img src="{{ asset('site/assets/images/screen_contasareceber_pc.png') }}" alt=""
                                          width="530"/>
                                 </a>
                             </div>
@@ -177,11 +174,9 @@
                                     their infancy Various versions have evolved over the years has survived not only
                                     five centuries but also the leap into electronic typesetting normal of letters.</p>
                             </div>
-
-                        </li><!-- end section -->
+                        </li>
 
                         <li>
-
                             <div class="one_half">
                                 <br/><br/>
                                 <h2>Controle de Acesso de Usuários</h2>
@@ -192,16 +187,134 @@
                                     their infancy Various versions have evolved over the years has survived not only
                                     five centuries but also the leap into electronic typesetting normal of letters.</p>
                             </div>
-
                             <div class="one_half last">
-                                <a href="{{ asset('site/assets/images/screen_controledeacessodeusuario_laptop.png') }}"
+                                <a href="{{ asset('site/assets/images/screen_controledeacessodeusuario_pc.png') }}"
                                    class="fancybox" rel="gallery1" title="Controle de Acesso de Usuários">
-                                    <img src="{{ asset('site/assets/images/screen_controledeacessodeusuario_laptop.png') }}"
+                                    <img src="{{ asset('site/assets/images/screen_controledeacessodeusuario_pc.png') }}"
                                          alt="" width="530"/>
                                 </a>
                             </div>
+                        </li>
 
-                        </li><!-- end section -->
+                        <li>
+                            <div class="one_half">
+                                <a href="{{ asset('site/assets/images/screen_entradadenota_pc.png') }}"
+                                   class="fancybox" rel="gallery1" title="Entrada de Nota">
+                                    <img src="{{ asset('site/assets/images/screen_entradadenota_pc.png') }}"
+                                         alt="" width="530"/>
+                                </a>
+                            </div>
+                            <div class="one_half last">
+                                <br/><br/>
+                                <h2>Entrada de Nota</h2>
+                                <h6 class="grayc">Lorem Ipsum as their default model text, and a search for 'lorem
+                                    ipsum' will uncover many web sites when an unknown printer took a galley.</h6>
+                                <p>Many desktop publishing packages and web page editors now use Lorem Ipsum as default
+                                    model text, and a search for 'lorem ipsum' will uncover many web sites still in
+                                    their infancy Various versions have evolved over the years has survived not only
+                                    five centuries but also the leap into electronic typesetting normal of letters.</p>
+                            </div>
+                        </li>
+
+                        <li>
+                            <div class="one_half">
+                                <br/><br/>
+                                <h2>Nota Eletrônica</h2>
+                                <h6 class="grayc">Lorem Ipsum as their default model text, and a search for 'lorem
+                                    ipsum' will uncover many web sites when an unknown printer took a galley.</h6>
+                                <p>Many desktop publishing packages and web page editors now use Lorem Ipsum as default
+                                    model text, and a search for 'lorem ipsum' will uncover many web sites still in
+                                    their infancy Various versions have evolved over the years has survived not only
+                                    five centuries but also the leap into electronic typesetting normal of letters.</p>
+                            </div>
+                            <div class="one_half last">
+                                <a href="{{ asset('site/assets/images/screen_notaeletronica_pc.png') }}"
+                                   class="fancybox" rel="gallery1" title="Nota Eletrônica">
+                                    <img src="{{ asset('site/assets/images/screen_notaeletronica_pc.png') }}"
+                                         alt="" width="530"/>
+                                </a>
+                            </div>
+                        </li>
+
+                        <li>
+                            <div class="one_half">
+                                <a href="{{ asset('site/assets/images/screen_produtos_pc.png') }}"
+                                   class="fancybox" rel="gallery1" title="Produtos">
+                                    <img src="{{ asset('site/assets/images/screen_produtos_pc.png') }}"
+                                         alt="" width="530"/>
+                                </a>
+                            </div>
+                            <div class="one_half last">
+                                <br/><br/>
+                                <h2>Produtos</h2>
+                                <h6 class="grayc">Lorem Ipsum as their default model text, and a search for 'lorem
+                                    ipsum' will uncover many web sites when an unknown printer took a galley.</h6>
+                                <p>Many desktop publishing packages and web page editors now use Lorem Ipsum as default
+                                    model text, and a search for 'lorem ipsum' will uncover many web sites still in
+                                    their infancy Various versions have evolved over the years has survived not only
+                                    five centuries but also the leap into electronic typesetting normal of letters.</p>
+                            </div>
+                        </li>
+
+                        <li>
+                            <div class="one_half">
+                                <br/><br/>
+                                <h2>Relatório de Vendas</h2>
+                                <h6 class="grayc">Lorem Ipsum as their default model text, and a search for 'lorem
+                                    ipsum' will uncover many web sites when an unknown printer took a galley.</h6>
+                                <p>Many desktop publishing packages and web page editors now use Lorem Ipsum as default
+                                    model text, and a search for 'lorem ipsum' will uncover many web sites still in
+                                    their infancy Various versions have evolved over the years has survived not only
+                                    five centuries but also the leap into electronic typesetting normal of letters.</p>
+                            </div>
+                            <div class="one_half last">
+                                <a href="{{ asset('site/assets/images/screen_venda_pc.png') }}"
+                                   class="fancybox" rel="gallery1" title="Relatório de Vendas">
+                                    <img src="{{ asset('site/assets/images/screen_venda_pc.png') }}"
+                                         alt="" width="530"/>
+                                </a>
+                            </div>
+                        </li>
+
+                        <li>
+                            <div class="one_half">
+                                <a href="{{ asset('site/assets/images/screen_sintegra_pc.png') }}"
+                                   class="fancybox" rel="gallery1" title="Sintegra">
+                                    <img src="{{ asset('site/assets/images/screen_sintegra_pc.png') }}"
+                                         alt="" width="530"/>
+                                </a>
+                            </div>
+                            <div class="one_half last">
+                                <br/><br/>
+                                <h2>Sintegra</h2>
+                                <h6 class="grayc">Lorem Ipsum as their default model text, and a search for 'lorem
+                                    ipsum' will uncover many web sites when an unknown printer took a galley.</h6>
+                                <p>Many desktop publishing packages and web page editors now use Lorem Ipsum as default
+                                    model text, and a search for 'lorem ipsum' will uncover many web sites still in
+                                    their infancy Various versions have evolved over the years has survived not only
+                                    five centuries but also the leap into electronic typesetting normal of letters.</p>
+                            </div>
+                        </li>
+
+                        <li>
+                            <div class="one_half">
+                                <br/><br/>
+                                <h2>Venda</h2>
+                                <h6 class="grayc">Lorem Ipsum as their default model text, and a search for 'lorem
+                                    ipsum' will uncover many web sites when an unknown printer took a galley.</h6>
+                                <p>Many desktop publishing packages and web page editors now use Lorem Ipsum as default
+                                    model text, and a search for 'lorem ipsum' will uncover many web sites still in
+                                    their infancy Various versions have evolved over the years has survived not only
+                                    five centuries but also the leap into electronic typesetting normal of letters.</p>
+                            </div>
+                            <div class="one_half last">
+                                <a href="{{ asset('site/assets/images/screen_venda_pc.png') }}"
+                                   class="fancybox" rel="gallery1" title="Venda">
+                                    <img src="{{ asset('site/assets/images/screen_venda_pc.png') }}"
+                                         alt="" width="530"/>
+                                </a>
+                            </div>
+                        </li>
 
                     </ul>
                 </div>
@@ -222,7 +335,7 @@
 
             <div class="clearfix margin_top7"></div>
 
-            <div class="one_fourth animate fadeInUp" data-anim-type="fadeInUp">
+            <div class="one_fourth animate" data-anim-type="fadeInUp">
                 <div class="secbox">
 
                     <i class="fa fa-file-text-o"></i>
@@ -232,7 +345,7 @@
                 </div>
             </div><!-- end section -->
 
-            <div class="one_fourth animate fadeInUp" data-anim-type="fadeInUp" data-anim-delay="100">
+            <div class="one_fourth animate" data-anim-type="fadeInUp" data-anim-delay="100">
                 <div class="secbox">
 
                     <i class="fa fa-user"></i>
@@ -242,64 +355,64 @@
                 </div>
             </div><!-- end section -->
 
-            <div class="one_fourth animate fadeInUp" data-anim-type="fadeInUp" data-anim-delay="200">
+            <div class="one_fourth animate" data-anim-type="fadeInUp" data-anim-delay="200">
                 <div class="secbox">
 
                     <i class="fa fa-tag"></i>
                     <div class="clearfix"></div>
-                    <h4>Verificação automática dos Produtos</h4>
+                    <h4>Verificação Automática Dos Produtos</h4>
 
                 </div>
             </div><!-- end section -->
 
-            <div class="one_fourth last animate fadeInUp" data-anim-type="fadeInUp" data-anim-delay="300">
+            <div class="one_fourth last animate" data-anim-type="fadeInUp" data-anim-delay="300">
                 <div class="secbox">
 
                     <i class="fa fa-tag"></i>
                     <div class="clearfix"></div>
-                    <h4>Lançamento automático de totais e impostos</h4>
+                    <h4>Lançamento Automático de Totais e Impostos</h4>
 
                 </div>
             </div><!-- end section -->
 
             <div class="clearfix margin_top7"></div>
 
-            <div class="one_fourth animate fadeInUp" data-anim-type="fadeInUp">
+            <div class="one_fourth animate" data-anim-type="fadeInUp">
                 <div class="secbox">
 
                     <i class="fa fa-cloud-download"></i>
                     <div class="clearfix"></div>
-                    <h4>Backup nos nossos servidores na nuvem</h4>
+                    <h4>Backup Nos Nossos Servidores na Nuvem</h4>
 
                 </div>
             </div><!-- end section -->
 
-            <div class="one_fourth animate fadeInUp" data-anim-type="fadeInUp" data-anim-delay="100">
+            <div class="one_fourth animate" data-anim-type="fadeInUp" data-anim-delay="100">
                 <div class="secbox">
 
                     <i class="fa fa-eye"></i>
                     <div class="clearfix"></div>
-                    <h4>Interface simples e de fácil entendimento</h4>
+                    <h4>Interface Simples e De Fácil Entendimento</h4>
 
                 </div>
             </div><!-- end section -->
 
-            <div class="one_fourth animate fadeInUp" data-anim-type="fadeInUp" data-anim-delay="200">
+            <div class="one_fourth animate" data-anim-type="fadeInUp" data-anim-delay="200">
                 <div class="secbox">
 
                     <i class="fa fa-tasks"></i>
                     <div class="clearfix"></div>
-                    <h4>Relatórios diferenciados <br><br></h4>
+                    <h4>Relatórios Diferenciados <br><br></h4>
 
                 </div>
             </div><!-- end section -->
 
-            <div class="one_fourth last animate fadeInUp" data-anim-type="fadeInUp" data-anim-delay="300">
+            <div class="one_fourth last animate" data-anim-type="fadeInUp" data-anim-delay="300">
                 <div class="secbox">
 
                     <i class="fa fa-check"></i>
                     <div class="clearfix"></div>
-                    <h4>Atende 100% às exigências da SEFAZ</h4>
+                    <h4>Atende 100% Às Exigências da SEFAZ</h4>
 
                 </div>
             </div><!-- end section -->
