--- a/app/Resources/views/site/sobre/index.html.twig
+++ b/app/Resources/views/site/sobre/index.html.twig
@@ -29,56 +29,11 @@
         </div>
     </div>
 
-    <div class="clearfix"></div>
-
-    <div class="fusection5" style="background: none; padding: 45px 0px">
-        <div class="container">
-
-            <div class="one_half animate fadeInUp" data-anim-type="fadeInUp" data-anim-delay="200">
-
-                <div class="alileft" align="left"><h3>O Que Fazemos</h3></div>
-                <br>
-                <p align="left">A RC Informática está há 18 anos no mercado lançando e aprimorando produtos que
-                    gerenciam e facilitam
-                    a
-                    tomada de decisões em empresas que precisam de respostas eficientes.
-                    Atenda as demandas do mercado e às mudanças na legislação, mantemos profissionais especializados e
-                    em
-                    acompanhamento full time para garantir atualizações à frente da concorrência, garantindo resposta
-                    rápida
-                    e resultados para que sua empresa se mantenha competitiva e você tenha muito mais tranquilidade.
-                </p>
-
-            </div>
-
-            <div class="one_half last animate fadeInUp" data-anim-type="fadeInUp" data-anim-delay="350">
-
-                <div class="alileft" align="left"><h3>Parceiros</h3></div>
-                <br>
-                <div class="one_half">
-                    <img src="{{ asset('site/assets/images/Logo_bematech.jpg') }}" alt=""
-                         style="border: 3px solid #f4f4f4; width: 80%" align="left">
-                </div>
-
-                <div class="one_half last">
-                    <img src="{{ asset('site/assets/images/Logo_Daruma.jpg') }}" alt=""
-                         style="border: 3px solid #f4f4f4; width: 80%;" align="left">
-                </div>
-
-            </div>
-
-        </div>
-    </div>
-
-    <div class="clearfix"></div>
+    <div class="clearfix margin_top5"></div>
 
     <div class="feature_section19">
         <div class="container">
-
-            <h1>
-                Nossos Clientes
-                <b>Confira alguns testemunhos sobre nós</b>
-            </h1>
+            <h1>Nossos Clientes</h1>
             <br/><br/>
             <div class="clearfix"></div>
 
@@ -91,26 +46,44 @@
 
                                 <div class="one_half">
                                     <div class="pesbox">
-                                        There are many variations of passages of lorem Ipsum available but the majority
-                                        suffered alteration in some form by injected as they humo aren rando smised you
-                                        need to be long establishe reader as will be distracte Ipsum which look
-                                        reasonable is always sheets containin sum passages more recently with desktop
-                                        publishin software like.
+                                        <h5>Como está o atendimento da RC Informática?</h5>
+                                        <p> - Bem prático, sem burocracia.</p>
+                                        <br>
+                                        <h5>Como você caracteriza o nível de conhecimento dos nossos funcionários?</h5>
+                                        <p> - Nota 10</p>
+                                        <br>
+                                        <h5>Qual a sua necessidade em relação a informática hoje?</h5>
+                                        <p> - A informática ela é muito necessária para mim, pois dependo dela para tudo
+                                            que faço.</p>
+                                        <br>
+                                        <h5>Você indicaria nosso produtos a outros clientes?</h5>
+                                        <p> - Sim, sem duvida, pois confio na qualidade da RC Informártica.</p>
                                     </div>
-                                    <div class="pesimg"> &nbsp; <strong>- Marison Avasty</strong> &nbsp;<i>custmer</i>
-                                        <img src="{{ asset('site/assets/images/people-img2.jpg') }}" alt=""/></div>
+                                    <div class="pesimg"> &nbsp; <strong> Cliente: Rei das Bicicletas</strong>&nbsp;
+                                        <i> - Adicionar o contato do cliente</i>
+                                        <img src="{{ asset('site/assets/images/client.png') }}" alt=""/>
+                                    </div>
                                 </div>
 
                                 <div class="one_half last">
                                     <div class="pesbox">
-                                        There are many variations of passages of lorem Ipsum available but the majority
-                                        suffered alteration in some form by injected as they humo aren rando smised you
-                                        need to be long establishe reader as will be distracte Ipsum which look
-                                        reasonable is always sheets containin sum passages more recently with desktop
-                                        publishin software like.
+                                        <h5>Como está o atendimento da RC Informática?</h5>
+                                        <p> - Nota 1000.</p>
+                                        <br>
+                                        <h5>Como você caracteriza o nível de conhecimento dos nossos funcionários?</h5>
+                                        <p> - 100% integrados.</p>
+                                        <br>
+                                        <h5>Qual a sua necessidade em relação a informática hoje?</h5>
+                                        <p> - Facilitar a informação de forma rápida e segura.</p>
+                                        <br>
+                                        <h5>Você indicaria nosso produtos a outros clientes?</h5>
+                                        <p> - Com certeza.</p>
+                                        <br>
                                     </div>
-                                    <div class="pesimg"> &nbsp; <strong>- Jacob Alexander</strong> &nbsp;<i>custmer</i>
-                                        <img src="{{ asset('site/assets/images/people-img2.jpg') }}" alt=""/></div>
+                                    <div class="pesimg"> &nbsp; <strong>Cliente: Ótica Provisão</strong> &nbsp;
+                                        <i> - Adicionar o contato do cliente</i>
+                                        <img src="{{ asset('site/assets/images/client.png') }}" alt=""/>
+                                    </div>
                                 </div>
 
                             </li><!-- end section -->
@@ -119,26 +92,45 @@
 
                                 <div class="one_half">
                                     <div class="pesbox">
-                                        There are many variations of passages of lorem Ipsum available but the majority
-                                        suffered alteration in some form by injected as they humo aren rando smised you
-                                        need to be long establishe reader as will be distracte Ipsum which look
-                                        reasonable is always sheets containin sum passages more recently with desktop
-                                        publishin software like.
+                                        <h5>Como está o atendimento da RC Informática?</h5>
+                                        <p> - O atendimento é muito bom, alguns funcionários demonstram muito interesse
+                                            em resolver rapidamente os problemas.</p>
+                                        <br>
+                                        <h5>Como você caracteriza o nível de conhecimento dos nossos funcionários?</h5>
+                                        <p> - Vários funcionários aparentam ter sido muito bem treinados.</p>
+                                        <br>
+                                        <h5>Qual a sua necessidade em relação a informática hoje?</h5>
+                                        <p> - Hoje, precisamos, dentre os principais, controlar nossas entradas e saídas
+                                            de mercadoria, precisamos dos relatórios financeiros, tais como os
+                                            controles de receitas e controle das comissões dos vendedores.</p>
+                                        <br>
+                                        <h5>Você indicaria nosso produtos a outros clientes?</h5>
+                                        <p> - Sim. Sistema indicado para empresas do nosso porte.</p>
                                     </div>
-                                    <div class="pesimg"> &nbsp; <strong>- Darlene Aja</strong> &nbsp;<i>custmer</i> <img
-                                                src="{{ asset('site/assets/images/people-img2.jpg') }}" alt=""/></div>
+                                    <div class="pesimg"> &nbsp; <strong>- Cliente STB</strong> &nbsp;
+                                        <i> - Adicionar o contato do cliente</i>
+                                        <img src="{{ asset('site/assets/images/client.png') }}" alt=""/>
+                                    </div>
                                 </div>
 
                                 <div class="one_half last">
                                     <div class="pesbox">
-                                        There are many variations of passages of lorem Ipsum available but the majority
-                                        suffered alteration in some form by injected as they humo aren rando smised you
-                                        need to be long establishe reader as will be distracte Ipsum which look
-                                        reasonable is always sheets containin sum passages more recently with desktop
-                                        publishin software like.
+                                        <h5>Como está o atendimento da RC Informática?</h5>
+                                        <p> - xxxx</p>
+                                        <br>
+                                        <h5>Como você caracteriza o nível de conhecimento dos nossos funcionários?</h5>
+                                        <p> - xxx</p>
+                                        <br>
+                                        <h5>Qual a sua necessidade em relação a informática hoje?</h5>
+                                        <p> - xxx.</p>
+                                        <br>
+                                        <h5>Você indicaria nosso produtos a outros clientes?</h5>
+                                        <p> - xxx</p>
                                     </div>
-                                    <div class="pesimg"> &nbsp; <strong>- Glen Lincoln</strong> &nbsp;<i>custmer</i>
-                                        <img src="{{ asset('site/assets/images/people-img2.jpg') }}" alt=""/></div>
+                                    <div class="pesimg"> &nbsp; <strong>- Cliente XXX</strong> &nbsp;
+                                        <i> - Adicionar o contato do cliente</i>
+                                        <img src="{{ asset('site/assets/images/client.png') }}" alt=""/>
+                                    </div>
                                 </div>
 
                             </li><!-- end section -->
