--- a/web/site/assets/css/style.css
+++ b/web/site/assets/css/style.css
@@ -1997,12 +1997,19 @@ ul.fun_facts {
 /* FOOTER STYLES
 /*------------------------------------------------------*/
 /* Address */
-.footer1 {
+/*.footer1 {
 	float: left;
 	width: 100%;
 	padding: 70px 0px 40px 0px;
 	border-top: 5px solid #000;
 	background: url(../images/footer-bg.jpg) repeat left top;
+}*/
+
+.footer1 {
+	float: left;
+	width: 100%;
+	padding: 18px 0px 40px 0px;
+	background: #262626 url(../images/footer-graph2.jpg) no-repeat center bottom;
 }
 .footer1 h4 {
 	color: #fff;
@@ -2343,7 +2350,7 @@ ul.faddress {
 }
 
 /* copyrights */
-.copyright_info {
+/*.copyright_info {
 	float: left;
 	padding: 25px 0px 18px 0px;
 	margin: 0px 0px 0px 0px;
@@ -2354,6 +2361,18 @@ ul.faddress {
 	font-style: normal;
 	font-weight: normal;
 	background: #303030;
+}*/
+.copyright_info {
+	float: left;
+	padding: 0px 0px 35px 0px;
+	margin: 0px 0px 0px 0px;
+	width: 100%;
+	color: #999;
+	font-size: 12px;
+	color: #999;
+	font-style: normal;
+	font-weight: normal;
+	background: #1a1a1a;
 }
 .copyright_info.two {
 	padding: 22px 0px 18px 0px;
