--- a/app/Resources/views/site/base.html.twig
+++ b/app/Resources/views/site/base.html.twig
@@ -1,3 +1,7 @@
+{% if form is defined %}
+{% form_theme form 'site/_form/_fields.html.twig' %}
+{% endif %}
+
 <!DOCTYPE HTML>
 <!--[if IE 7 ]>
 <html lang="en-gb" class="isie ie7 oldie no-js"> <![endif]-->
