pagina sobre e pagina home

--- a/web/site/assets/css/style.css
+++ b/web/site/assets/css/style.css
@@ -1901,6 +1901,7 @@ ul.fun_facts {
 	padding: 12px 0px;
 	text-align: center;
 	border: 1px solid #575757;
+	background-color: #fff;
 }
 .parallax_sec9 li:hover {
 	border: 1px solid #999;
